# IDA-VTable-Utility

./: .gitignore  CMakeLists.txt  README.md  ida-plugin.json
backups/v1.1.1/: ida-plugin.json  pseudocode_xrefs.cpp
backups/v1.1.2/: ida-plugin.json  pseudocode_xrefs.cpp
backups/v1.2.0/: ida-plugin.json  pseudocode_xrefs.cpp
demo/: pseudocode_xrefs_complex_args_demo.i64  pseudocode_xrefs_declaration_test.i64  pseudocode_xrefs_demo.cpp  pseudocode_xrefs_inheritance_demo.i64
src/: pseudocode_xrefs.cpp
tools/: check_declaration_persistence.py  check_declaration_persistence.txt  check_declaring_class.py  check_declaring_class.txt  check_disasm_x.py  check_disasm_x.txt  check_inheritance.py  check_input_events.py  check_j_action.py  check_named_vtable.py  check_plugin.py  check_rename_vtable.py  check_vtable_jump.py  check_vtable_rewrite.py  check_x_hierarchy.py  check_x_hierarchy.txt  check_x_navigation.py  check_x_navigation.txt  check_y_actions.py  check_y_actions.txt  check_y_signature.py  check_y_signature.txt  setup_complex_demo.py  setup_inheritance_demo.py
